--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -46,6 +46,32 @@
   outline: none;
 }
 
+/* Role Field */
+.role-container {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  width: 100%;
+  margin-bottom: 15px;
+}
+
+
+.role-container select {
+  width: 100%;
+  padding: 12px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  font-size: 16px;
+  background-color: #fff;
+  transition: border 0.3s ease;
+  cursor: pointer;
+}
+
+.role-container select:focus {
+  border-color: #007bff;
+  outline: none;
+}
+
 /* Password Field */
 .password-container {
   position: relative;
@@ -87,6 +113,10 @@ button {
   background-color: #0056b3;
 }
 
+.signup-button:active{
+  transform: scale(0.95);
+}
+
 .login-button {
   background-color: green;
   color: white;
@@ -94,6 +124,10 @@ button {
 
 .login-button:hover {
   background-color: darkgreen;
+}
+
+.login-button:active{
+  transform: scale(0.95);
 }
 
 /* Login Prompt */
@@ -127,6 +161,10 @@ button {
 .otp-button:hover {
   background-color: #1cbe44; /* Darker Orange */
   transform: scale(1.05);
+}
+
+.otp-button:active{
+  transform: scale(0.95);
 }
 
 .otp-button:disabled {
