--- a/src/pages/Login/Login.css
+++ b/src/pages/Login/Login.css
@@ -64,6 +64,9 @@
   .login-form button:hover {
     background: darkgreen;
   }
+  .login-form button:active {
+    transform: scale(0.95);
+  }
   
     .password-container {
     position: relative;
@@ -78,8 +81,58 @@
   
   .eye-icon {
     position: absolute;
-    top: 10px;
+    top: 40%;
     right: 10px;
     cursor: pointer;
     color: #555;
   }
+  .reset-container {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 10px 20px;
+    border: 1px solid #ddd;
+    border-radius: 8px;
+    background-color: #f9f9f9;
+    width: 300px;
+    margin: 20px auto;
+    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
+}
+
+.reset-text {
+    font-size: 16px;
+    color: #333;
+}
+
+.reset-button {
+    padding: 8px 16px;
+    font-size: 14px;
+    color: white;
+    background-color: #3498db;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background 0.3s ease, transform 0.2s ease;
+}
+
+.reset-button:hover {
+    background-color: #2980b9;
+    transform: scale(1.05);
+}
+
+.reset-button:active {
+    transform: scale(0.95);
+}
+
+.signupbk-button {
+  background-color: #007bff;
+  color: white;
+}
+
+.signupbk-button:hover {
+  background-color: #0056b3;
+}
+
+.signupbk-button:active{
+  transform: scale(0.95);
+}
